--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,10 +1,13 @@
 use_frameworks!
 
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target 'DTBKit_Example' do
   pod 'DTBKit', :path => '../'
-
+  
+  pod 'SnapKit', '5.0.1'
+  pod 'DoraemonKit/Core', '~> 3.0.4', configurations: %w[Debug] # 必选
+  
   target 'DTBKit_Tests' do
     inherit! :search_paths
 
@@ -15,7 +18,7 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
     end
   end
