--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,9 +3,9 @@ use_frameworks!
 platform :ios, '11.0'
 
 target 'DTBKit_Example' do
-  pod 'DTBKit', :path => '../', :testspecs => ['Tests']
+#  pod 'DTBKit', :path => '../', :testspecs => ['Tests']
   
-  # pod 'SnapKit', '5.0.1'
+  pod 'SnapKit', '5.0.1'
   pod 'DoraemonKit/Core', '~> 3.0.4', configurations: %w[Debug] # 必选
   
 #  target 'DTBKit_Tests' do
