[feat] image named

--- a/Example/project.yml
+++ b/Example/project.yml
@@ -30,7 +30,6 @@ targets:
         - -Wno-implicit-retain-self
     sources:
       ## Metatata
-      ## 元数据
       - path: "../DTBKit.podspec"
         group: "Metadata"
       - path: "../README.md"
@@ -41,18 +40,23 @@ targets:
         group: "Metadata"
       - path: "project.yml"
         group: "Metadata"
+      
       ## Examples
-      ## 示例代码
       - path: "DTBKit"
         group: "Examples"
+      
       ## Sources
-      ## 源代码，不用 pods 而是直接引用到 Example 工程中，方便开发
       - path: "../DTBKit/DTBKit.swift"
         group: "Source Codes"
       - path: "../DTBKit/Basic"
         group: "Source Codes"
       - path: "../DTBKit/UIKit"
         group: "Source Codes"
+      
+      ## Resources
+      - path: "../DTBKit/Assets"
+        group: "Resources"
+      
       ## Tests
 #      - path: "../DTBKit/Tests/"
 #        group: "Unit Tests"
