--- a/Demo/Podfile
+++ b/Demo/Podfile
@@ -1,9 +1,11 @@
+workspace 'Demo.xcworkspace'
+source 'https://github.com/CocoaPods/Specs.git'
+
 use_frameworks!
 
-platform :ios, '11.0'
-
 target 'Demo' do
-  
+  platform :ios, '11.0'
+
 #  pod 'DTBKit', :path => '../', :testspecs => ['Tests']
   
 #  pod 'DTBKit', :path => '../'
@@ -26,6 +28,11 @@ post_install do |installer|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
       config.build_settings['ENABLE_BITCODE'] = 'NO'
+      config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
+      config.build_settings['EXPANDED_CODE_SIGN_IDENTITY'] = ""
+      config.build_settings['CODE_SIGNING_REQUIRED'] = "NO"
+      config.build_settings['CODE_SIGNING_ALLOWED'] = "NO"
+      config.build_settings['GENERATE_INFOPLIST_FILE'] = "NO"
       config.build_settings['SWIFT_VERSION'] = "5.0"
     end
   end
