--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # macOS
 .DS_Store
 
+# GPS
+*.gpx
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
