--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,7 +5,8 @@ platform :ios, '11.0'
 target 'DTBKit_Example' do
   
 #  Change development pods to xcodegen
-#  pod 'DTBKit', :path => '../', :testspecs => ['Tests']
+  pod 'DTBKit/Basic', :path => '../', :testspecs => ['Tests']
+  
   
 #  pod 'SnapKit', '5.0.1'
 #  pod 'URLNavigator', '2.3.0'
