--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,6 +6,7 @@ target 'DTBKit_Example' do
   
 #  Change development pods to xcodegen
   pod 'DTBKit/Core', :path => '../'
+  pod 'DTBKit/Chain', :path => '../'
   pod 'DTBKit/Basic', :path => '../', :testspecs => ['Tests']
   pod 'DTBKit/UIKit', :path => '../'
   
