--- a/Example/project.yml
+++ b/Example/project.yml
@@ -18,8 +18,10 @@ targets:
         PRODUCT_BUNDLE_IDENTIFIER: org.darkThanBlack.demo.DTBKit
         IPHONEOS_DEPLOYMENT_TARGET: 11.0
         SWIFT_VERSION: 4.2
-        TARGETED_DEVICE_FAMILY: 1  # iPhone
-        EXCLUDED_ARCHS[sdk=iphonesimulator*]: arm64
+        # 1: iPhone
+        TARGETED_DEVICE_FAMILY: 1
+        # 注释以便 Xcode 15.3 Uni-Test 成功运行
+        # EXCLUDED_ARCHS[sdk=iphonesimulator*]: arm64
         UILaunchStoryboardName: LaunchScreen
         FRAMEWORK_SEARCH_PATHS:
           - $(inherited)
