--- a/Example/project.yml
+++ b/Example/project.yml
@@ -28,10 +28,11 @@ targets:
           - $(PODS_CONFIGURATION_BUILD_DIR)/DTBKit
         LIBRARY_SEARCH_PATHS:
           - $(inherited)
-        OTHER_SWIFT_FLAGS:
-          - "$(inherited) -D COCOAPODS -D DTBKitable"
+        # 注释以消除 pod 警告
+        # OTHER_SWIFT_FLAGS:
+        #   - "$(inherited) -D COCOAPODS -D DTBKitable"
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: $(inherited)
-        ENABLE_BITCODE: false
+        ENABLE_BITCODE: true
         WARNING_CFLAGS:
         - -Wno-documentation
         - -Wno-unguarded-availability
