--- a/.gitignore
+++ b/.gitignore
@@ -70,8 +70,9 @@ Pods/
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 Carthage/Checkouts
-
 Carthage/Build/
+Demo/Carthage/Checkouts
+Demo/Carthage/Build/
 
 # Accio dependency management
 Dependencies/
