--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ Packages/
 Package.pins
 Package.resolved
 *.xcodeproj
+
 #
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
@@ -73,6 +74,7 @@ Carthage/Checkouts
 Carthage/Build/
 Demo/Carthage/Checkouts
 Demo/Carthage/Build/
+!DTBKit.xcodeproj
 
 # Accio dependency management
 Dependencies/
