--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Jazzy
 docs/
 
+# Wiki
+DTBKit.wiki/
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
