[feat] 功能与 xmkit 对齐中

--- a/Example/project.yml
+++ b/Example/project.yml
@@ -30,7 +30,7 @@ targets:
           - $(inherited)
         # 注释以消除 pod 警告
         # OTHER_SWIFT_FLAGS:
-        #   - "$(inherited) -D COCOAPODS -D DTBKitable"
+        #   - "$(inherited) -D COCOAPODS -D Kitable"
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: $(inherited)
         ENABLE_BITCODE: true
         WARNING_CFLAGS:
