demo ui change done...

--- a/Example/project.yml
+++ b/Example/project.yml
@@ -64,7 +64,7 @@ targets:
       properties:
         CFBundleAllowMixedLocalizations: true
         CFBundleDevelopmentRegion: zh_CN
-        CFBundleDisplayName: Tarot
+        CFBundleDisplayName: DTBKit
         CFBundleExecutable: $(EXECUTABLE_NAME)
         CFBundleIdentifier: $(PRODUCT_BUNDLE_IDENTIFIER)
         CFBundleInfoDictionaryVersion: 6.0
