--- a/Example/project.yml
+++ b/Example/project.yml
@@ -5,6 +5,7 @@ name: Example
 attributes:
   ORGANIZATIONNAME: darkThanBlack
 targets:
+  # 主工程
   DTBKit_Example:
     type: application
     platform: [iOS]
@@ -16,7 +17,7 @@ targets:
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: org.darkThanBlack.demo.DTBKit
-        IPHONEOS_DEPLOYMENT_TARGET: 12.0
+        IPHONEOS_DEPLOYMENT_TARGET: 11.0
         SWIFT_VERSION: 5.0
         # 1: iPhone
         TARGETED_DEVICE_FAMILY: 1
@@ -93,43 +94,85 @@ targets:
         #   - CFBundleTypeRole: Editor
         #     CFBundleURLName: weixin
         #     CFBundleURLSchemes: [com.googleusercontent.apps.35708]
-      
-#  DTBKit_Basic:
-#    type: framework
-#    platform: [iOS]
-#    platformSuffix: ""
-#    deploymentTarget:
-#      iOS: 10.0
-#    scheme:
-#      testTargets:
-#        - DTBKit_Tests
-#      gatherCoverageData: true
-#    sources:
-#      - path: "../DTBKit/DTBKit.swift"
-#      - path: "../DTBKit/Basic"
-#    settings:
-#      base:
-#        GENERATE_INFOPLIST_FILE: true
 
-#   DTBKit_Tests:
-#     type: bundle.unit-test
-#     platform: [iOS]
-#     platformSuffix: ""
-    
-#     sources:
-#       - path: "../DTBKit/BasicTests/"
-#         group: "Unit Tests"
-#     settings:
-#       # 以前没有 ``BUNDLE_EXECUTABLE_FOLDER_PATH`` 定义
-#       # https://developer.apple.com/forums/thread/723699
-#       # TEST_HOST: $(BUILT_PRODUCTS_DIR)/DTBKit_Example.app/$(BUNDLE_EXECUTABLE_FOLDER_PATH)/DTBKit_Example
-#       PRODUCT_BUNDLE_IDENTIFIER: org.darkThanBlack.demo.DTBKit
-#       BUNDLE_LOADER: $(TEST_HOST)
-#       GENERATE_INFOPLIST_FILE: true
-#       IPHONEOS_DEPLOYMENT_TARGET: 10.0
-#       SWIFT_VERSION: 5.0
-#       EXCLUDED_ARCHS[sdk=iphonesimulator*]: arm64
-#       CLANG_CXX_LANGUAGE_STANDARD: "gnu++20"
-#     dependencies:
-# #      - target: DTBKit_Basic
-#       - target: DTBKit_Example
+# 专门用于代码覆盖率统计, 避免影响主工程文件引用
+name: CodeCoverage
+attributes:
+  ORGANIZATIONNAME: darkThanBlack
+targets:
+  # 单独编译每个子模块, 并以 target 的形式依赖
+  DTBKit_Core:
+    type: framework
+    platform: [iOS]
+    platformSuffix: ""
+    deploymentTarget:
+      iOS: 11.0
+    # scheme:
+    #   testTargets:
+    #     - DTBKit_Basic_Tests
+    #   gatherCoverageData: true
+    sources:
+      - path: "../Sources/Core"
+    settings:
+      base:
+        GENERATE_INFOPLIST_FILE: true
+        
+  DTBKit_Chain:
+    type: framework
+    platform: [iOS]
+    platformSuffix: ""
+    deploymentTarget:
+      iOS: 11.0
+    # scheme:
+    #   testTargets:
+    #     - DTBKit_Basic_Tests
+    #   gatherCoverageData: true
+    sources:
+      - path: "../Sources/Chain"
+    dependencies:
+      - target: DTBKit_Core
+    settings:
+      base:
+        GENERATE_INFOPLIST_FILE: true
+  DTBKit_Basic:
+    type: framework
+    platform: [iOS]
+    platformSuffix: ""
+    deploymentTarget:
+      iOS: 11.0
+    scheme:
+      testTargets:
+        - DTBKit_Basic_Tests
+      gatherCoverageData: true
+    sources:
+      - path: "../Sources/Basic"
+    dependencies:
+      - target: DTBKit_Core
+      - target: DTBKit_Chain
+    settings:
+      base:
+        GENERATE_INFOPLIST_FILE: true
+
+  # 用于单独统计子模块的代码覆盖率, 普通测试走 cocoapods 的生成即可
+  DTBKit_Basic_Tests:
+    type: bundle.unit-test
+    platform: [iOS]
+    platformSuffix: ""
+    sources:
+      - path: "../Tests/BasicTests/"
+        group: "Unit Tests"
+    settings:
+      # 以前没有 ``BUNDLE_EXECUTABLE_FOLDER_PATH`` 定义, 参见 https://developer.apple.com/forums/thread/723699
+      # TEST_HOST: $(BUILT_PRODUCTS_DIR)/DTBKit_Example.app/$(BUNDLE_EXECUTABLE_FOLDER_PATH)/DTBKit_Example
+      PRODUCT_BUNDLE_IDENTIFIER: org.darkThanBlack.demo.DTBKit
+      BUNDLE_LOADER: $(TEST_HOST)
+      GENERATE_INFOPLIST_FILE: true
+      IPHONEOS_DEPLOYMENT_TARGET: 11.0
+      SWIFT_VERSION: 5.0
+      # 注释以便 Xcode 15.3 Uni-Test 成功运行
+      # EXCLUDED_ARCHS[sdk=iphonesimulator*]: arm64
+      CLANG_CXX_LANGUAGE_STANDARD: "gnu++20"
+    # 这里不用写
+    # dependencies:
+    # - target: DTBKit_Basic
+    # - target: DTBKit_Example
